# cpp-opgl-study

./: .gitignore  README.md
01-shader/: CMakeLists.txt  Makefile  main.cpp  shader-demo.cpp  shader-file.cpp  vertShader.glsl
01_shader/: shader.md  tirangle.cpp
01_triangle/: tirangle.cpp
01_triangle_color/: triangle.cpp
01_triangle_shader/: triangle.cpp
01_vao_shader/: rectangle.cpp
02_rectangle/: README.md  fragement.txt  rectangle.cpp  vertex.txt
02_triangle/: Makefile  triangle-3color.cpp  triangle-color.cpp  triangle_red.cpp
03_01_2d_texture/: Makefile  texture.cpp
03_2d_texture/: README.md  texture.cpp
03_app/: main.cpp
03_texture/: 2d-texture.cpp  Makefile  stb-demo.cpp  texture-basic.cpp
04_3dmodel/: Makefile  rectangle.cpp
04_cube/: Makefile  cube.cpp  multi-cube.cpp
04_transform/: Makefile  uniform-transform.cpp
05_vao_shader/: rectangle.cpp
07_TriangleBuffer/: Makefile  main.cpp
2d-shader/: 2d.cpp  Makefile
_codesnippets/: GLSL.md  image.md  obj-animation.md  opgl-cmk
_notes/: 00-setup.md  01-pipline.md  01-traingle.md  02-shader-vao.md  02-traingle.md  02-vao-vbo-vertex-shader.md  03-texture.md  04-transform.md  05-coorinate.md  06-camera.md  07-light.md  3d-math-matrix.md  3d-math.md  assimp.md  glm.md  imgui.md  math-matrix.md  math-vector.md  math.md  opengl.md  opgl-cmk  reference.md  soil.md  stb.md  vao-vbo-vertex-shader.md  window-lib.md
appclass/: main.cpp
common/: GameMath.h  ObjLoader.cpp  ObjLoader.h  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  myMesh.h  myOpgl.h  shader-c.cpp  shader-c.h  shader.cpp
game-skeleton/: game.cpp
include/: gl_mesh.hpp  gl_shader.hpp  gl_texture.hpp
opengl-qt-cube/: CMakeLists.txt  README.md
opengl-qt-cube/res/: tortuga.mtl
opengl-qt-cube/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp
opgl-imgui-cube/: 3dCube-old.cpp  3dCube.cpp  Makefile  opgl.h
opgl-imgui-example/: Makefile  basic.cpp  color-triangle.cpp  cube-turn.cpp  cube.cpp  red-triangle.cpp  shader.cpp  triangle.cpp
opgl-play/: CMakelists.txt  main.cpp
opgl-tutorial/: CMakeLists.txt  README.md
opgl-tutorial/src/: Display.cpp  Display.h  main.cpp
trangle/: main  (+1 more)
(+70 files in other folders)
